add and delete product

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
 
     <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
 
-    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css" />
+    <link type="text/css" rel="stylesheet" href="bower_components/bulma/css/bulma.css" />
 
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-
+    <link type="text/sass" rel="stylesheet" href="bower_components/bulma/sass/components/*.sass"  />
 
     <link type="text/css" rel="stylesheet" href="style.css" />
     <!-- <link type="text/less" rel="stylesheet" href="style.less"/>
