adding styles and routes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
     <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link type="text/sass" rel="stylesheet" href="./src/bower_components/bulma/sass/components/*.sass"  />
-
+    <link href="https://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="./src/style.css" />
+
 
   </head>
   <body>
